--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Jamie David | Portfolio</title>
+	<!-- Viewport for responsiveness -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Reset CSS from Meyersweb http://meyerweb.com/eric/tools/css/reset/reset.css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- Custom CSS styles -->
